fixing top and bottom battle field overflow issues

--- a/app/styles/components/battle-field.scss
+++ b/app/styles/components/battle-field.scss
@@ -1,8 +1,10 @@
 battle-field {
   position: relative;
+  overflow-x: auto;
   .cards {
-    padding: 4px;
+    padding: 16px 16px 16px 4px;
     position: absolute;
+    white-space: nowrap;
   }
   .top-row {
     top: 0;
